--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ click==8.1.3
 colorama==0.4.6
 dnspython==2.3.0
 email-validator==1.3.1
-Flask==2.2.3
-Flask-Cors==3.0.10
+Flask==2.3.2
+Flask-Cors==4.0.0
+Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.2
 flask-marshmallow==0.15.0
 Flask-Migrate==4.0.4
