--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,40 @@
-alembic==1.10.3
+alembic==1.11.2
+attrs==23.1.0
 beautifulsoup4==4.12.2
-click==8.1.3
-colorama==0.4.6
-dnspython==2.3.0
-email-validator==1.3.1
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+exceptiongroup==1.1.3
 Flask==2.2.3
 Flask-Cors==4.0.0
 Flask-HTTPAuth==4.8.0
 Flask-Login==0.6.2
-flask-marshmallow==0.15.0
 Flask-Migrate==4.0.4
-Flask-SQLAlchemy==3.0.3
+Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
-greenlet
-gunicorn==20.1.0
+greenlet==2.0.2
+gunicorn==21.2.0
+h11==0.14.0
 idna==3.4
-importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jinja2-time
 Mako==1.2.4
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-sqlalchemy==0.29.0
-packaging==23.0
-psycopg2==2.9.5
-psycopg2-binary==2.9.6
-pyparsing==3.0.9
-python-dateutil==2.8.2
-python-dotenv==0.21.1
-six==1.15.0
-SQLAlchemy==2.0.9
-typing_extensions==4.5.0
-Werkzeug==2.2.3
+MarkupSafe==2.1.3
+outcome==1.2.0
+packaging==23.1
+psycopg2-binary==2.9.7
+PySocks==1.7.1
+python-dotenv==1.0.0
+requests==2.31.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.20
+trio==0.22.2
+trio-websocket==0.10.3
+typing_extensions==4.7.1
+urllib3==2.0.4
+Werkzeug==2.3.7
+wsproto==1.2.0
 WTForms==3.0.1
-zipp==3.14.0
